--- a/views/detalhe-produto.pug
+++ b/views/detalhe-produto.pug
@@ -1,5 +1,6 @@
 extends layout
 
+block header
 block content
     .container.bg-white.border.rounded.shadow-sm
         .row.product-details.text-right
