consertei o caminho de envio do formulário de adição de produtos

--- a/views/index.pug
+++ b/views/index.pug
@@ -17,7 +17,7 @@ block content
 		.row.products.justify-content-center
 			if products
 				each product in products
-					.col-1.col-sm.product.card.m-2.border
+					.col-1.col-sm.product.card.m-2.border.mb-5
 						a(href=product.url class="stretched-link")
 						.product-icons.rounded
 							if cart
