fixed hero height on large screens

--- a/public/stylesheets/style.scss
+++ b/public/stylesheets/style.scss
@@ -160,6 +160,7 @@ body {
     background-position: center;
 
     min-height: 590px;
+    height: 100vh;
     padding:12px;
 
     .filter-header {
